# osim-snippets

./: .gitignore  CMakeLists.txt  Makefile  README.md  activate  build-opensim  configure  make
cmake/: FindGLEW.cmake  FindGLUT.cmake  Findglm.cmake
docs/: user-guide-notes.md
models/Models/Arm26/OutputReference/ForwardDynamics/NonphysiologicalResults/: arm26_states.sto  arm26_states_degrees.mot
models/Models/BouncingBlock/: toy_with_forces_states.sto
models/Models/DoublePendulum/: double_pendulum_states.sto
models/Models/Gait2354_Simbody/ResultsInverseDynamics1/: inverse_dynamics.sto
models/Models/WristModel/: wrist_TendonSurgery.osim
opensim-models/Models/BouncingBlock/: toy_with_forces_states.sto  toy_with_forces_states_degrees.mot
opensim-models/Models/BouncingBlock/forward/: toy_leg_sim_states.sto  toy_leg_sim_states_degrees.mot
opensim-models/Models/DoublePendulum/: double_pendulum_controls.sto  double_pendulum_states.sto  double_pendulum_states_degrees.mot
opensim-models/Models/RajagopalModel/: FullBodyModel_MuscleActuatedLowerLimb_TorqueActuatedUpperBody_controls.sto  FullBodyModel_MuscleActuatedLowerLimb_TorqueActuatedUpperBody_states.sto  FullBodyModel_MuscleActuatedLowerLimb_TorqueActuatedUpperBody_states_degrees.mot
resources/models/Code/Matlab/: configureOpenSim.m
resources/models/Models/Arm26/OutputReference/ForwardDynamics/NonphysiologicalResults/: arm26_controls.sto
resources/models/Models/BouncingBlock/: toy_with_forces_states_degrees.mot
resources/models/Models/DoublePendulum/: double_pendulum_controls.sto  double_pendulum_states_degrees.mot
resources/models/Models/Gait2354_Simbody/: gait2354_simbody_scaled.osim
resources/models/Models/Gait2354_Simbody/ResultsInverseDynamics/: inverse_dynamics.sto
resources/models/Models/Gait2354_Simbody/ResultsInverseDynamics2/: inverse_dynamics.sto
src/: OpenSimPartyDemoCable.cpp  OpenSimPartyDemoCable_new.cpp  OsimsnippetsConfig.h.in  experiment_wrapping_surfs.cpp  expt_wrapp.cpp  opensim_show.cpp  opensim_show.cpp.autosave  opensim_wrapper.cpp  opensim_wrapper.hpp  osim-snippets.cpp  show_model.cpp  size_of_objects.cpp  study_simbody_4_pendulum.cpp
src/experiment_wrapping_surfs/: CMakeLists.txt
src/opensim_show/: CMakeLists.txt  opensim_show.cpp  opensim_wrapper.cpp
src/show_model/: CMakeLists.txt  show_model.cpp
src/simbody_cable/: CMakeLists.txt  OpenSimPartyDemoCable.cpp  simbody_cable.cpp
src/size_of_objects/: CMakeLists.txt  size_of_objects.cpp
src/study_simbody_4_pendulum/: CMakeLists.txt  study_simbody_4_pendulum.cpp
